feat: :construction: add openapi base
