# ask-me-anything-api/src/infrastructure/server/routes/authentication/signup.ts
@@ -1,0 +1,19 @@
+import { Handler } from "express";
+
+const POST: Handler = (_request, response) => {
+  response.status(201).json({
+    data: {
+      type: '',
+      attributes: {
+        id: '',
+        avatar: '',
+        name: '',
+        username: '',
+      },
+    }
+  });
+};
+
+export {
+  POST,
+};
